--- a/notes/notes_flask.py/templates/index.html
+++ b/notes/notes_flask.py/templates/index.html
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        img{
-            height: 400px;
-            width: auto;
-        }
-    </style>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}Home- Flask{% endblock %}
+
+{% block body %}
     <h1> Welocme to the my first flask site</h1>
 
 
     <form method = "POST">
-        <label for = "name"> Enter your username</label>
+        <label for = "name">Enter your username</label>
         <input type = "text" name ="name"
         placeholder= "what is your name?">
         <br>
-        <input type ="submit">
+        <input type ="submit" value="Submit">
     </form>
-    
-    <img src = "https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg"
-    
-</body>
-</html>
+    <img src = "https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt = "palm trees"
+{% endblock %}
